--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,21 @@
+/* wildcard selector*/
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+
+/* general styling*/ 
+
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+
+}
+
+main {
+    /* Make main element take up surplus space*/
+    flex: 1 0 auto;
 }
