--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,10 @@ header {
     font-size: 0.8rem;
   }
   
+  .active {
+    border-bottom: 1px solid white;
+  }
+
   #home {
     color:yellow;
     text-decoration: none;
