added padding to the top of the page to place main content below header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,11 @@
 
 /* general styling*/
 
+#top-padding {
+    padding-top: 60px;
+  }
+  
+
 header {
     --padding: 10px 0;
     background: var(--background-color1);
