--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,3 +78,69 @@ main {
     /* Make main element take up surplus space*/
     flex: 1 0 auto;
 }
+
+
+@media (max-width: 650px) and (min-width: 200px)  {
+    #slogan {
+      font-size: 15px;
+    }
+    
+  }
+
+
+
+
+@media (max-width: 926px) {
+
+  /* ----------------------------MOBILE HAMBURER MENU ---------------------------- */
+/* Style the navigation menu */
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+    position: relative;
+    display: flex;
+  }
+  
+  /* Hide the links inside the navigation menu (except for logo/home) */
+  .topnav #myLinks {
+    display: none;
+  }
+  
+  /* Style navigation menu links */
+  .topnav a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+  }
+  
+  /* Style the hamburger menu */
+  .topnav a.icon {
+    background: black;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  
+  /* Add a grey background color on mouse-over */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Style the active link (or home/logo) */
+  .active {
+    background-color: var(--background-color1);
+    color: white;
+  }
+  
+  #myLinks a {
+    font-size:x-small;
+    line-height: 0;
+    text-align: center;
+  }
+  
+  }
+  /* ----------------------------MOBILE HAMBURER MENU END---------------------------- */
