--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,6 +186,12 @@ main {
     padding: 0;
   }
 
+  .footer {
+    background-color: var(--background-color1);
+    color: white;
+    text-align: center;
+    padding: 100px 30px 0;
+  }
 
 @media (max-width: 650px) and (min-width: 200px)  {
     #slogan {
