--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@
 /* general styling*/
 
 #top-padding {
-    padding-top: 60px;
+    padding-top: 56px;
   }
   
 
@@ -302,7 +302,7 @@ main {
 
   /* ------------------------------------Start of Media Queries----------------------------------------------- */
 
-@media (max-width: 926px)  {
+@media (max-width: 926px) and (min-width: 651px)  {
     header {
       padding: 0;
     }
