--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,28 @@ header {
   box-shadow: 0 2px 2px;
 }
 
+header h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  text-transform: uppercase;
+}
+
+header a {
+  text-decoration: none;
+  color: white
+}
+
+#menu {
+  font-size: 110%;
+  list-style-type: none;
+}
+
+#menu > li {
+  margin-bottom: 1em;
+}
+
+.active {
+  border-bottom: 1px solid;
+}
 .topnav {
     display: none;
   }
