--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,24 +51,28 @@
 header {
   background: var(--background-color1);
   position: fixed;
-  padding: 0 1rem;
+  padding: 10px 1rem;
   z-index: 99;
   width: 100%;
-  box-shadow: 0 2px 2px;
+  box-shadow: 0 2px 2px var(--background-color1);
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
 }
 
 header h1 {
   font-family: Arial, Helvetica, sans-serif;
   text-transform: uppercase;
+  font-size: 20px;
 }
 
 header a {
   text-decoration: none;
-  color: white
+  color: white;
 }
 
 #menu {
-  font-size: 110%;
+  font-size: 70%;
   list-style-type: none;
 }
 
@@ -79,6 +83,28 @@ header a {
 .active {
   border-bottom: 1px solid;
 }
+
+/*Navbar styles with dropdown toggle*/
+nav {
+  position: absolute;
+  background-color:  var(--background-color1);
+  width: 100%;
+  left: 0;
+  box-shadow: 0 2px 2px var(--background-color1);
+  display: none;
+  top: 100%
+}
+
+/*Nav toggle */
+#nav-toggle:checked~nav {
+  display: block;
+}
+
+#nav-toggle {
+  display: none;
+}
+
+/* Javascript header CSS 
 .topnav {
     display: none;
   }
@@ -120,7 +146,7 @@ header a {
       font-weight: bold;
       cursor:pointer
   }
-
+*/
 body {
     min-height: 100vh;
     display: flex;
