--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,10 +54,10 @@ header {
   padding: 10px 1rem;
   z-index: 99;
   width: 100%;
-  box-shadow: 0 2px 2px var(--background-color1);
+  box-shadow: 0 2px 2px rgb(49, 49, 49);
   display: flex;
   justify-content: space-between;
-  align-items: baseline;
+  align-items: center;
 }
 
 header h1 {
@@ -158,6 +158,7 @@ body {
 main {
     /* Make main element take up surplus space*/
     flex: 1 0 auto;
+    margin-top: 55px; 
 }
 
 /*punchline styling*/
@@ -282,9 +283,9 @@ main {
     padding: 0px !important;
   }
 
-@media (max-width: 650px) and (min-width: 200px)  {
+@media (max-width: 767px) and (min-width: 200px)  {
     #slogan {
-      font-size: 15px;
+      font-size: 12px;
     }
     
     #bio {
@@ -301,7 +302,7 @@ main {
 
 
 
-
+/* Hamburger menu styling with Javascript functionality */
 @media (max-width: 926px) {
 
   /* ----------------------------MOBILE HAMBURER MENU ---------------------------- */
@@ -359,14 +360,50 @@ main {
 
   /* ------------------------------------Start of Media Queries----------------------------------------------- */
 
-@media (max-width: 926px) and (min-width: 651px)  {
+@media (max-width: 992px) and (min-width: 768px)  {
     header {
-      padding: 0;
+      padding: 0 0 0 1rem;
     }
     
+    nav {
+      display: block;
+      position: relative;
+      box-shadow: none;
+      width: fit-content;
+      padding-right: 1rem;
+    }
+
+    ul {
+      margin-bottom: 0;
+    }
+
+    #menu {
+      display: flex;
+    }
+
+    #menu > li {
+      padding-left: 1rem;
+      font-size: small;
+      align-items: center;
+    }
+
+    #title h1 {
+      font-size: 30px;
+    }
+    
+    .nav-toggle-label {
+      display: none;
+    }
+
+    main {
+      /* Make main element take up surplus space*/
+      flex: 1 0 auto;
+      margin-top: 45px; 
+    }
+    /*
     #top-padding {
       padding-top: 50px;
-    }
+    }*/
     
     p{
       font-size: var(--phone-text);
