--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@
 header {
   background: var(--background-color1);
   position: fixed;
-  padding: 10px 1rem;
+  padding: 10px 1rem 0px 1rem;
   z-index: 99;
   width: 100%;
   box-shadow: 0 2px 2px rgb(49, 49, 49);
@@ -164,7 +164,7 @@ body {
 main {
     /* Make main element take up surplus space*/
     flex: 1 0 auto;
-    margin-top: 55px; 
+    margin-top: 42px; 
 }
 
 /*punchline styling*/
