--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,8 +31,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    overflow: hidden;
 }
-
 
 /* general styling*/
 
@@ -153,12 +153,11 @@ nav {
       cursor:pointer
   }
 */
+
 body {
-    min-height: 100vh;
     display: flex;
     flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
-
 }
 
 main {
@@ -167,6 +166,9 @@ main {
     margin-top: 42px; 
 }
 
+.container {
+  max-width: 100%;
+}      
 /*punchline styling*/
 .punchline {
     background-color: var(--background-color2);
@@ -181,6 +183,7 @@ main {
 .container {
   padding-left: 0;
   padding-right: 0;
+  margin:0;
 }
 
   .intro {
@@ -421,6 +424,8 @@ main {
   /* ------------------------------------Start of Media Queries----------------------------------------------- */
 
 @media screen and (min-width: 768px)  {
+    
+      
     header {
       padding: 0 0 0 1rem;
     }
