--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 /* general styling*/
@@ -64,7 +64,7 @@ header {
 header h1 {
   font-family: Arial, Helvetica, sans-serif;
   text-transform: uppercase;
-  font-size: 20px;
+  font-size: 17px;
 }
 
 header a {
