--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -311,12 +311,113 @@ main {
     padding: 50px 50px 0;
   }
 
-  div #about-me,  div #my-struggles {
+  div #about-me >img,  div #my-struggles > img{
     padding: 0;
     margin: auto;
+    max-width: 100%;
   }
 
-@media (max-width: 767px) and (min-width: 200px)  {
+
+
+
+  /* ------------------------------------Start of Media Queries----------------------------------------------- */
+
+@media screen and (min-width: 768px)  {
+    
+      
+    header {
+      padding: 0 0 0 1rem;
+    }
+    
+    nav {
+      display: block;
+      position: relative;
+      box-shadow: none;
+      width: fit-content;
+      padding-right: 1rem;
+    }
+
+    ul {
+      margin-bottom: 0;
+    }
+
+    #menu {
+      display: flex;
+    }
+
+    #menu > li {
+      padding-left: 1rem;
+      font-size: small;
+      align-items: center;
+    }
+
+    #title h1 {
+      font-size: 30px;
+    }
+    
+    .nav-toggle-label {
+      display: none;
+    }
+
+    main {
+      /* Make main element take up surplus space*/
+      flex: 1 0 auto;
+      margin-top: 45px; 
+    }
+    /*
+    #top-padding {
+      padding-top: 50px;
+    }*/
+    
+    p{
+      font-size: var(--tablet-p);
+    }
+  
+    h1 {
+      font-size: var(--phone-texth1);
+    }
+  
+    h2 {
+      font-size: var(--phone-texth2);
+    }
+    
+    h3 {
+      font-size: var(--phone-texth3);
+    }
+  
+   h4 {
+      font-size: var(--phone-texth4);
+    }
+
+    #bio p {
+        padding: 0px 7px;
+        line-height: 20px;
+      }
+
+      /*about.html css*/
+      #about-me h2, #about-me p {
+        padding: 20px 20px;
+      }
+
+      #about-me > h2 {
+        font-size: 20px;
+      }
+
+      #about-me p {
+        font-size: 14px
+      }
+  }
+
+  @media screen and (min-width: 992px)  {
+    #menu a:hover {
+      border-bottom: 1px solid white;
+      color: white;
+    }
+
+  }
+
+
+  @media (max-width: 767px) and (min-width: 200px)  {
     #slogan {
       font-size: 12px;
     }
@@ -414,150 +515,6 @@ main {
 
 
 
-/* Hamburger menu styling with Javascript functionality */
-@media (max-width: 926px) {
-
-  /* ----------------------------MOBILE HAMBURER MENU ---------------------------- */
-/* Style the navigation menu */
-.topnav {
-    overflow: hidden;
-    background-color: #333;
-    position: relative;
-    display: flex;
-  }
-  
-  /* Hide the links inside the navigation menu (except for logo/home) */
-  .topnav #myLinks {
-    display: none;
-  }
-  
-  /* Style navigation menu links */
-  .topnav a {
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    display: block;
-  }
-  
-  /* Style the hamburger menu */
-  .topnav a.icon {
-    background: black;
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  
-  /* Add a grey background color on mouse-over */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Style the active link (or home/logo) */
-  .active {
-    background-color: var(--background-color1);
-    color: white;
-  }
-  
-  #myLinks a {
-    font-size:x-small;
-    line-height: 0;
-    text-align: center;
-  }
-  
-  }
-  /* ----------------------------MOBILE HAMBURER MENU END---------------------------- */
-
-  /* ------------------------------------Start of Media Queries----------------------------------------------- */
-
-@media screen and (min-width: 768px)  {
-    
-      
-    header {
-      padding: 0 0 0 1rem;
-    }
-    
-    nav {
-      display: block;
-      position: relative;
-      box-shadow: none;
-      width: fit-content;
-      padding-right: 1rem;
-    }
-
-    ul {
-      margin-bottom: 0;
-    }
-
-    #menu {
-      display: flex;
-    }
-
-    #menu > li {
-      padding-left: 1rem;
-      font-size: small;
-      align-items: center;
-    }
-
-    #title h1 {
-      font-size: 30px;
-    }
-    
-    .nav-toggle-label {
-      display: none;
-    }
-
-    main {
-      /* Make main element take up surplus space*/
-      flex: 1 0 auto;
-      margin-top: 45px; 
-    }
-    /*
-    #top-padding {
-      padding-top: 50px;
-    }*/
-    
-    p{
-      font-size: var(--tablet-p);
-    }
-  
-    h1 {
-      font-size: var(--phone-texth1);
-    }
-  
-    h2 {
-      font-size: var(--phone-texth2);
-    }
-    
-    h3 {
-      font-size: var(--phone-texth3);
-    }
-  
-   h4 {
-      font-size: var(--phone-texth4);
-    }
-
-    #bio p {
-        padding: 0px 7px;
-        line-height: 20px;
-      }
-
-  }
-
-  @media screen and (min-width: 992px)  {
-    #menu a:hover {
-      border-bottom: 1px solid white;
-      color: white;
-    }
-
-  }
-
-
-
-
-
   /*---------------------Imported Footer styling---------------------------*/
 .btn-primary {
     background-color: var(--button-color1);
@@ -636,3 +593,61 @@ main {
         .bd-mode-toggle {
           z-index: 1500;
         }
+
+
+
+        /* Hamburger menu styling with Javascript functionality */
+@media (max-width: 926px) {
+
+  /* ----------------------------MOBILE HAMBURER MENU ---------------------------- */
+/* Style the navigation menu */
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+    position: relative;
+    display: flex;
+  }
+  
+  /* Hide the links inside the navigation menu (except for logo/home) */
+  .topnav #myLinks {
+    display: none;
+  }
+  
+  /* Style navigation menu links */
+  .topnav a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+  }
+  
+  /* Style the hamburger menu */
+  .topnav a.icon {
+    background: black;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  
+  /* Add a grey background color on mouse-over */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Style the active link (or home/logo) */
+  .active {
+    background-color: var(--background-color1);
+    color: white;
+  }
+  
+  #myLinks a {
+    font-size:x-small;
+    line-height: 0;
+    text-align: center;
+  }
+  
+  }
+  /* ----------------------------MOBILE HAMBURER MENU END---------------------------- */
