--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,7 +297,7 @@ main {
 
   /* About.html css*/
 
-  #about-me {
+  #about-me, #my-struggles {
     padding: 0px 0px 0px 0px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
@@ -307,7 +307,8 @@ main {
     width: 100%;    
   }
 
-  #about-me h2, #about-me p {
+  #about-me h2, #about-me p,
+  #my-struggles h2, #my-struggles p {
     padding: 50px 50px 0;
   }
 
@@ -395,15 +396,18 @@ main {
       }
 
       /*about.html css*/
-      #about-me h2, #about-me p {
+      #about-me h2, #about-me p,
+      #my-struggles h2, #my-struggles p {
         padding: 20px 20px;
       }
 
-      #about-me > h2 {
+      #about-me > h2,
+      #my-struggles > h2 {
         font-size: 20px;
       }
 
-      #about-me p {
+      #about-me p,
+      #my-struggles p {
         font-size: 14px
       }
   }
@@ -491,23 +495,27 @@ main {
     }
 
     /* About.html css*/
-    #about-me {
+    #about-me,
+    #my-struggles {
       width: 50%;
     }
 
-    #about-me h2 {
+    #about-me h2,
+    #my-struggles h2 {
       padding: 10px 10px 0px 7px;
       font-size: 8px;
       line-height: normal;
     }
 
-    #about-me p {
+    #about-me p,
+    #my-struggles p {
       padding: 0px 20px 0px 7px;
       font-size: 8px;
       line-height: normal;
     }
 
-    #about-me > img {
+    #about-me > img,
+    #my-struggles > img {
       width: 100%;
     }
 
