--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    
+    max-width: 1320px;
 }
 
 /* general styling*/
@@ -59,6 +59,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  max-width: 1296px;
 }
 
 header h1 {
@@ -158,6 +159,7 @@ body {
     display: flex;
     flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
+    max-width: 1296px;
 }
 
 main {
@@ -187,12 +189,9 @@ main {
   margin:0;
 }
 
-.row {
-  background-color: var(--background-color3);
-}
-
 .intro {
-  background-image: url(../images/stone-background.jpeg);
+  background: url("../images/stone-background.jpeg");
+  z-index: 99;
   padding-left: 10px;
 }
 
@@ -292,6 +291,7 @@ main {
 
   .py-5 {
     padding: 0px !important;
+    width: 100%;
   }
 
 
@@ -303,7 +303,7 @@ main {
     text-align: left; 
     height: max-content;
     margin: auto;
-    width: 100%;    
+    width: 100%;  
   }
 
   #about-me h2, #about-me p,
@@ -317,8 +317,10 @@ main {
     max-width: 100%;
   }
 
-
-
+  .row:has(#about-me),
+  .row:has(#my-struggles) {
+    background-color: var(--background-color3);
+  }
 
   /* ------------------------------------Start of Media Queries----------------------------------------------- */
 
@@ -326,7 +328,7 @@ main {
     
       
     header {
-      padding: 0 0 0 1rem;
+      padding: 0 0 0 0;
     }
     
     nav {
@@ -415,6 +417,17 @@ main {
     #menu a:hover {
       border-bottom: 1px solid white;
       color: white;
+    }
+
+    h1{font-size:64px;}
+h2{font-size:48px;}
+h3{font-size:36px;}
+h4{font-size:24px;}
+h5{font-size:20px;}
+h6{font-size:18px;}
+    
+    p {
+      font-size: 14px;
     }
 
   }
