add padding to top of punchline section for screen sizes about 767px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -356,6 +356,10 @@ main {
       padding-top: 50px;
     }*/
     
+    .punchline {
+      padding-top: 20px;
+    }
+
     p{
       font-size: var(--tablet-p);
     }
