--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,6 +307,13 @@ main {
     background-color: var(--background-color3);
   }
 
+  /*tvns css*/
+  #tvns-video {
+    padding: 60px 0;
+    display: flex;
+    justify-content: center;
+  }
+  
   /* ------------------------------------Start of Media Queries----------------------------------------------- */
 
 @media screen and (min-width: 768px)  {
