--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,6 +168,7 @@ main {
     flex: 1 0 auto;
     margin-top: 40px;
     overflow-x: hidden;
+    background-color: var(--backdrop-color);
 }
 
 .container {
@@ -313,6 +314,16 @@ main {
     display: flex;
     justify-content: center;
   }
+
+  #tvns-video > iframe {
+    max-width: 90vw;
+    width: 70%;
+  }
+
+  div:has(#tvns-video) {
+    border-bottom: 2px solid var(--background-color3);
+    margin-bottom: 20px;
+  }
   
   /* ------------------------------------Start of Media Queries----------------------------------------------- */
 
@@ -356,7 +367,7 @@ main {
     main {
       /* Make main element take up surplus space*/
       flex: 1 0 auto;
-      margin-top: 45px; 
+      margin-top: 45px;
     }
     /*
     #top-padding {
@@ -543,6 +554,11 @@ h6{font-size:18px;}
     #my-struggles > img {
       width: 100%;
     }
+
+    #tvns-video > iframe {
+      height: auto;
+    }
+  
 
   }
 
