--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -311,10 +311,11 @@ main {
   /*tvns css*/
   #tvns {
     padding-left: 0;
+    margin: auto;
   }
   
   #tvns-video {
-    padding: 60px 0;
+    padding: 60px 0 0px 0;
     display: flex;
     justify-content: center;
   }
@@ -329,9 +330,10 @@ main {
     margin-right: 10px;
   }
 
-  div:has(#tvns-video) {
+  .div-seperator{
     border-bottom: 2px solid var(--background-color3);
-    margin-bottom: 20px;
+    margin: 60px auto;
+    width: 80%;
   }
   
   /* ------------------------------------Start of Media Queries----------------------------------------------- */
@@ -541,7 +543,7 @@ h6{font-size:18px;}
 
     #about-me p, #about-me h2,
     #my-struggles p, #my-struggles h2 {
-      font-size: 7px;
+      font-size: 9px;
       line-height: normal;
     }
 
@@ -577,6 +579,12 @@ h6{font-size:18px;}
   @media (max-width: 300px) and (min-width: 200px) {
     #tvns p, #tvns h4 {
       font-size: 7px;
+      line-height: normal;
+    }
+
+    #about-me p, #about-me h2,
+    #my-struggles p, #my-struggles h2 {
+      font-size: 6px;
       line-height: normal;
     }
   }
