change width of images on about me page to -webkit-fill-available

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -593,7 +593,7 @@ h6{font-size:18px;}
 
     #about-me > img,
     #my-struggles > img {
-      width: 100%;
+      width: -webkit-fill-available;
     }
 
     #tvns-video > iframe {
