--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -369,8 +369,6 @@ main {
   /* ------------------------------------Start of Media Queries----------------------------------------------- */
 
 @media screen and (min-width: 768px)  {
-    
-      
     header {
       padding: 5px 0 0 1rem;
     }
@@ -487,6 +485,16 @@ main {
 
 
   @media (max-width: 767px) and (min-width: 200px)  {
+      /* Hide scrollbar for Chrome, Safari and Opera */
+  body::-webkit-scrollbar {
+    display: none;
+  }
+
+  body {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+
     #slogan {
       font-size: 12px;
     }
