add back font-awesome to bring back hamburger menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -369,6 +369,8 @@ main {
   /* ------------------------------------Start of Media Queries----------------------------------------------- */
 
 @media screen and (min-width: 768px)  {
+    
+      
     header {
       padding: 5px 0 0 1rem;
     }
@@ -485,15 +487,9 @@ main {
 
 
   @media (max-width: 767px) and (min-width: 200px)  {
-      /* Hide scrollbar for Chrome, Safari and Opera */
-  body::-webkit-scrollbar {
-    display: none;
-  }
-
-  body {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-  }
+    body {
+      overflow: hidden;
+    }
 
     #slogan {
       font-size: 12px;
