--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -366,6 +366,11 @@ main {
   iframe {
     border: 0;
   }
+
+  .footer div {
+    margin: auto;
+  }
+
   /* ------------------------------------Start of Media Queries----------------------------------------------- */
 
 @media screen and (min-width: 768px)  {
